[package]
name = "steamwebapi"
description = "Provides an API wrapper for the steam workshop interfaces (IPublishedFileService and ISteamRemoteStorage), with the addition of proxy and api key support"
repository = "https://github.com/jackzmc/rs-steamwebapi/"
license-file = "LICENSE"
keywords = ["steamapi", "workshop", "steam_workshop"]
categories = ["api-bindings"]
version = "0.2.0"
authors = ["Jackz <me@jackz.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
lazy_static = "1.4.0"