[package]
name = "steam-workshop-api"
description = "Provides an API wrapper for the steam workshop interfaces (IPublishedFileService and ISteamRemoteStorage) with the addition of proxy and api key support"
repository = "https://github.com/Jackzmc/rs-steam-workshop-api"
license = "MIT"
keywords = ["steamapi", "workshop", "steam_workshop"]
categories = ["api-bindings"]
version = "0.4.0"
authors = ["Jackz <me@jackz.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0.120"
lazy_static = "1.5.0"
log = "0.4.22"